Moved classes related to JEL expression evaluation out of the TOPCAT package, using the classes in TTOOLS for general processing instead.

--- a/topcat/.properties
+++ b/topcat/.properties
@@ -2,12 +2,12 @@ jar.class.path=\
  topcat_demo.jar \
  epsgraphics_classes.jar \
  acme_encoding.jar \
- jel_g.jar \
  ivoafits-notamfits-0.2.jar \
  ../util/util.jar \
  ../pal/pal.jar \
  ../axis/axis.jar \
  ../table/table.jar \
+ ../ttools/ttools.jar \
  ../mirage/mirage.jar \
  ../votable/votable.jar \
  ../fits/fits.jar \
