Adapt for tests

--- a/connect/build.xml
+++ b/connect/build.xml
@@ -1024,7 +1024,7 @@
 
       <batchtest>
         <fileset dir="${tests.dir}">
-          <include name="**/JUnit*"/>
+          <include name="**/*Test*"/>
         </fileset>
       </batchtest>
 
