Renamed table-parts.jnlp to table.jnlp.  This is a component, not an application.  The old table.jnlp was an application (TableCopy), but this didn't really make sense since I don't think you could invoke TableCopy using WebStart (no GUI).  If someone works out how to, it would probably be better put in a file called tablecopy.jnlp in any case.

--- a/datanode/build.xml
+++ b/datanode/build.xml
@@ -606,7 +606,7 @@
                                     excludes="${name}/${name}.jar"/>
          <extension name="UTIL" href="util.jnlp"/>
          <extension name="ARRAY" href="array.jnlp"/>
-         <extension name="TABLE-PARTS" href="table-parts.jnlp"/>
+         <extension name="TABLE" href="table.jnlp"/>
          <extension name="JNIAST" href="jniast.jnlp"/>
          <extension name="TAMFITS" href="tamfits.jnlp"/>
          <extension name="FITS" href="fits.jnlp"/>
