--- a/frog/build.xml
+++ b/frog/build.xml
@@ -561,7 +561,7 @@
          <extension name="FITS" href="fits.jnlp"/>
          <extension name="HDS" href="hds.jnlp"/>
          <extension name="HELP" href="help.jnlp"/>
-         <extension name="TABLE-PARTS" href="table-parts.jnlp"/>
+         <extension name="TABLE" href="table.jnlp"/>
          <extension name="TOPCAT-PARTS" href="topcat-parts.jnlp"/>
        </resources>
        <application_desc main_class="uk.ac.starlink.frog.FrogMain"/>
