Renamed a couple of JNLP files; one was wrong and the other has been renamed in its own package.

--- a/topcat/build.xml
+++ b/topcat/build.xml
@@ -641,8 +641,8 @@
          <extension name="DATANODE" href="datanode.jnlp"/>
          <extension name="UTIL" href="util.jnlp"/>
          <extension name="HELP" href="help.jnlp"/>
-         <extension name="TABLE-PARTS" href="table-parts.jnlp"/>
-         <extension name="TTOOLS-PARTS" href="ttools-parts.jnlp"/>
+         <extension name="TABLE" href="table.jnlp"/>
+         <extension name="TTOOLS" href="ttools.jnlp"/>
          <extension name="MIRAGE" href="mirage.jnlp"/>
        </resources>
        <component_desc/>
