--- a/splat/build.xml
+++ b/splat/build.xml
@@ -84,7 +84,7 @@
   <!-- Define the package name and current versions -->
   <property name="Name" value="SPLAT"/>
   <property name="name" value="splat"/>
-  <property name="version" value="3.0b"/>
+  <property name="version" value="3.1"/>
 
   <!-- The Java package name -->
   <property name="package.name" value="uk.ac.starlink.splat"/>
