--- a/astrogrid/.properties
+++ b/astrogrid/.properties
@@ -1,1 +1,1 @@
-jar.class.path=../aglib/aglib.jar ../table/table.jar ../vo/vo.jar
+jar.class.path=../aglib/aglib.jar ../table/table.jar ../connect/connect.jar
