copy image files during build

--- a/connect/build.xml
+++ b/connect/build.xml
@@ -417,13 +417,11 @@
 
     <!-- Copy extra files that should live with packages classes
      !   (i.e. are discovered using "getResource()"). -->
- <!--
     <copy todir="${build.classes}">
       <fileset dir="${java.dir}">
-        <include name="**/{package.support.files}"/>
+        <include name="**/*.gif"/>
       </fileset>
     </copy>
- -->
 
     <!-- Local third party jars, if any. Copy straight into
      !   distribution directories to save on unnecessary copies and to
