Added reference to new SRB package

--- a/datanode/.properties
+++ b/datanode/.properties
@@ -12,4 +12,5 @@ jar.class.path=\
  ../ndx/ndx.jar \
  ../votable/votable.jar \
  ../astrogrid/astrogrid.jar \
- ../aglib/aglib.jar
+ ../aglib/aglib.jar \
+ ../srb/srb/jar
