--- a/topcat/.properties
+++ b/topcat/.properties
@@ -14,6 +14,7 @@ jar.class.path=\
  ../datanode/datanode.jar \
  ../help/jhall.jar \
  ../astrogrid/astrogrid.jar \
+ ../srb/srb.jar \
  ../vo/vo.jar \
  ../splat/splat.jar \
  ../sog/sog.jar
